Doc: Final doc update
Wrote the conclusion
Wrote evaluation of technology, project and game
Expanded on further work
Questionnaire, mentions 4 point rating scale
Results: changed the order of agreement/disagreement
Wrote abstract + Norwegian abstract
Added IDE and API to glossary
Added place and date to preface
Changed main title to: Exploring collaboration in video games for children
Various fixes to introduction, added GitHub repo to the context
Better explanation to methodology, added table to show structure
Added a reference to the specialization project
Fixes of small grammatical and writing errors
Added summary to chosen technologies
Added some new requirements
Changed the testing part to use a table instead of description of requirements
Changed all image sizes to fill the text width
Changes to summaries in the literature study to be more focused on the thesis
Added small part about project management software
Changed some part intros to better match the content
Added a new image from the testing

--- a/doc/report/conclusion/chp_conclusion.tex
+++ b/doc/report/conclusion/chp_conclusion.tex
@@ -1,2 +1,23 @@
 \chapter{Conclusion}
-\note{TODO: skrive en fet konklusjon.}
+%A brief summary, just a few paragraphs, of your key findings, related back to what you expected to see.
+This thesis started with the intention of creating a collaborative video game for children that encourages social interaction. The goals for the research was to create a game prototype, test this prototype with children, observe and analyse the results from the testing, and to study the technologies and process involved in video game development. This was achieved through a literature study; the description of the design and implementation of the game prototype; a presentation of observations, results and analysis of the play testing; and finally an evaluation to answer the research questions for the thesis.
+
+%Present and discuss the main findings of your research
+%Implications of findings
+\section{Findings}
+The literature study creates a foundation of knowledge on which the game prototype and method for evaluation of the play test is built. This is done by describing the current state of video game technology and concepts, exploring interaction device like the PlayStation Move, and aspects of immersion, like social interaction and the importance of graphics and audio, and discovering GameFlow, a model for describing game enjoyment. In the literature study, important technologies for video game development was discovered, such as the game engine Unreal Engine 4 that the game prototype was created with.
+
+The design of the game prototype describes the concepts and game elements that stimulates collaboration and encourages social interaction. Having two players with different roles created a dependency between them where they had to work together in order to succeed. The puzzle elements worked well in encouraging social interaction among the players, where the children would think out loud and inquire and instruct the other player on how to solve the puzzles. There was a unique relationship between the character and the hand where the character would pick up items for the hand, which in turn could be used to aid the character and progress through the levels. 
+
+An experiment was performed in the form of a play test at Buvik School's after school activity program, where 19 pupils participated. Through observations from the play test and analysis of the results from the questionnaire, the game prototype was found successful at stimulating collaboration and encouraging social interaction between the children. There was a lot of communication between the children while playing, in order to progress through the levels of the game. All of the children responded that it was important to communicate and collaborate while playing the game. The game grabbed the attention of the children and made them concentrate on the game while playing, making them immersed in the game world. 
+
+\section{Limitations}
+Although the game prototype and play testing was a success, there are some limitations to this research. The game prototype was developed with Unreal Engine 4 and is limited to use of the underlying architecture of that game engine. Additionally, there was only one person developing the game prototype, which led to some challenges in the creative aspect of development, complications in the testing for a game with two players, and difficulties in predicting the skill levels of the children. However, this was remedied by weekly meetings with the advisor, which provided a second point of view and guidance. Moreover, the experiment was done with only 19 participants, which could impact the reliability of the results. The questions were asked to players in pairs, so the responses could potentially be affected by the other player, or by bias in the interpretation from the examiners. The play test was also a special occasion for the children and might influence their excitement and enjoyment of the game. Furthermore, this project was also restricted on time and resources, which limited the scope and opportunities for research and experimentation.
+
+\section{Relevance of Thesis}
+In this thesis, the literature study is helpful for aspiring and qualified video game creators, especially independent developers, to broaden their knowledge of video game technologies, interaction devices, aspects of video game immersion, and the resources available for video game development.
+Additionally, the game prototype and its design serves as a source for inspiration and demonstration for a video game that stimulates collaboration and encourages social interaction that can be used in research and video game development.
+Analysis of the results and observations from the play testing provides empirical evidence and quantitative data that solidifies the claims made in this thesis, which can be used in further research.
+
+
+
