--- a/doc/report/conclusion/chp_evaluation.tex
+++ b/doc/report/conclusion/chp_evaluation.tex
@@ -1,6 +1,5 @@
 \chapter{Evaluation}
-\note{Nytt kapittel!}
-This chapter will evaluate the research done in this project, as well as an evaluation of the project as a whole, an evaluation of the technology used, and an evaluation of the game prototype.
+This chapter will evaluate the research done in this project, as well as an evaluation of the game prototype, an evaluation of the technology used, and an evaluation of the project as a whole.
 
 
 \section{Evaluation of Research and Results}
@@ -33,27 +32,35 @@ The third and final research goal was intended to explore the various technologi
 	\item[RQ3.1] What tools are available for developing video games as an independent developer.
 	\item[RQ3.2] Can proprietary controllers made for game consoles be used to develop games for the PC?
 \end{description}
-There are many technologies that support the independent video game developer in creating video games, as discribed in Chapter \ref{chp:technology}, with the most important being the game engine. Game engines lessen the burden of the game developer by handling common video game functionality like rendering, physics, lighting, and networking. Two of the most popular game engines are Unreal Engine 4 and Unity3D 5 - these game engines have big online communities that can provide help and information. The entry level for these game engines are free so any aspiring game developer can test their skills in video game development without monetary risk. There are also free software tools available like IDEs for managing and writing source code, and version control systems for keeping track of the games history and for preventing loss and corruption of code. Game assets such as sound and graphics are also available online with both free and paid options, there are even possibilities for hiring a graphic or sound designer online. The assets for the game prototype in this project come from free online resources, details in Section \ref{sec:chosen_tech}.
+There are many technologies that support the independent video game developer in creating video games, as discribed in Chapter \ref{chp:technology}, with the most important being the game engine. Game engines lessen the burden of the game developer by handling common video game functionality like rendering, physics, lighting, and networking. Two of the most popular game engines are Unreal Engine 4 and Unity3D 5 - these game engines have big online communities that can provide help and information. The entry level for these game engines are free so any aspiring game developer can test their skills in video game development without monetary risk. There are also free software tools available like \gls{ide}s for managing and writing source code, and version control systems for keeping track of the games history and for preventing loss and corruption of code. Game assets such as sound and graphics are also available online with both free and paid options, there are even possibilities for hiring a graphic or sound designer online. The assets for the game prototype in this project come from free online resources, details in Section \ref{sec:chosen_tech}.
 
-From the experience of developing the game prototype, using proprietary controllers made for consoles on the PC is not a straightforward process. With some of the controllers not providing official APIs it can be difficult to get the controllers to work in the desired environment. This was experienced while trying to get the PlayStation Move controller to work with Unreal Engine 4, more details in Section \ref{sec:dev_limitations}. The Move controller was abandoned because of complications when integrating it in the game prototype. \note{Vurderte å skrive et lite delkapittel om de andre devicene og hvilke drivere osv som var tilgjengelig for dem i kapittel 6 om video game technology og nevne det her.}
+From the experience of developing the game prototype, using proprietary controllers made for consoles on the PC is not a straightforward process. With some of the controllers not providing official APIs it can be difficult to get the controllers to work in the desired environment. This was experienced while trying to get the PlayStation Move controller to work with Unreal Engine 4, more details in Section \ref{sec:dev_limitations}. The Move controller was abandoned because of complications when integrating it in the game prototype.
 	
-	
-\section{Evaluation of Technology}
-\note{Her skal jeg skrive litt om mine erfaringer med å jobbe med unreal move etc.}
-%Hvordan var det å jobbe med unreal
-%Hvordan jeg håndterte move osv.
+
 
 
 \section{Evaluation of the Game Prototype}
 \label{sec:eval_game}
-\note{Her skal jeg evaluere spill prototypen, gå litt igjennom hva som var bra og hva som burde endres/utvides, med utgangspunkt i resultatene til spørreundersøkelsen. Kanskje nevne andre mulige målgrupper for spillet/ andre muligheter.}
-%hva syns jeg om resultatet
-%Ville jeg gjor noe anderledes
-%Ikke bare for barn
+The game prototype was a success at stimulating collaboration and encouraging social interaction and all of the children enjoyed the gameplay. The idea of the players having two different roles was well received by the children and created a unique dynamic that that made the players depend on each other. The other elements were also good for enhancing the gameplay and making it a game that the children easily got immersed in. 
+
+However, there are also some room for improvement as made apparent by the results of the questionnaire. The challenge of the game was not consistent and was a little too difficult for the children. The goal of the game was not that apparent either. The game should have had some more introductory levels to teach the players the basics, which could have helped teach the players the mechanics of the game better and made the goal more apparent. There could also have been a story to the game, but this was omitted due to time constraints. The level design could also have been a little better and more adjusted to the skill level of the children, especially the first level. There was a spot in the first level where the players would get stuck and had a hard time getting out of.
+
+The game is very open and could support a multitude of new gameplay elements. There are some enhancements that could have been made to make the hand more active like having the hand being in danger at times and the character had to rescue them - the way it is now the stress level for the hand is low compared to the character. For example there could have been some ghosts chasing the hand, and only the character could scare them away. There are currently also only two different items that the hand can grab and place in the world, other possible ideas for items include an anvil that can be dropped on enemies to kill them, ladders, suspension bridges, or ropes for the character to get around the world easier, or maybe a vehicle for the player to ride or fly in to cross big gaps or float across lava.
+
+Children was the primary target audience for the game, but the gameplay elements can be combined to create more difficult levels that are challenging even for experienced adult gamers by leaving less room for error and punishing mistakes more. The graphics and audio could also be changed to change its look and feel. For example the game can be made more gloomy and dark to appeal to an older audience that enjoys horror style video games.
+
+	
+\section{Evaluation of Technology}
+Unreal Engine 4 was decently easy to get into in the beginning. The gameplay framework was logical, and having the C++ code classes inherit from classes in the framework made it easy to start creating gameplay elements. The only problem was that a big part of the online tutorials for Unreal Engine 4 included or was entirely based on Blueprints. Blueprints a visual scripting language that can be used together with or in place of C++ classes. In the beginning, Blueprints seemed like a useless addition for an experienced programmer, as everything could be done using C++, and was considered a tool for inexperienced programmers. Even though Blueprints are useful for inexperienced programmers it can also be used by experienced programmers to create quick prototypes of features, and can also be used to change attributes of classes to create different variants.
+
+There were some initial problems getting the PlayStation Move controller connected to the computer, but it was eventually achieved through an unofficial \gls{api}. A plugin for Unreal Engine that was based on this \gls{api} was discovered and tested working with the Move controller early on in the project and the technology seemed promising. However, when the time came to integrate the move controller to the game, there was no way of accession the raw positional data of the move controller on the screen, which made it hard to implement without much complications. More time should have been invested into trying to get the Move controller working, but since the plugin was tested and looked functional in the beginning of the project, it was assumed to provide the needed functionality.
 
 
 \section{Evaluation of Project}
-\note{Skrive litt om hvordan det var å jobbe med et stort prosjekt aleine. Hvordan veildeningen gikk og påvirket arbeidet. Hva jeg har lært fra prosjektet, og litt om hvordan det var å jobbe med/utvikle spill for barn.}
+Working on a big project like this was a challenging and educational experience. To work on this project alone was both freeing in the sense of having the sole responsibility, but it was also a little frightening to face this challenge alone. The weekly development cycle was a good way of conducting the development because it broke down the project into intermediate chunks that could be completed on a week by week basis. The weekly meeting with the advisor was invaluable for feedback and direction on what to do next, and for keeping up the motivation for the project.
+
+To work with children was a new and enlightening experience that posed some challenges. It was hard to judge the skill level of the children, which in turn made it hard to create appropriately challenging levels. The levels were made with an increasing difficulty, but it could have started a little lower in the challenge spectrum. It was impressing to see how well the children were able to communicate and work together to solve the levels, and they were all genuinely excited to be able to play. All of the children were well behaved and no problems occurred during testing, other that technical issues. The children would also come with unexpected feedback - some of the children asked the name of the game and also the name of the character, or what planet they were on. One child said that they were competing with the spider when asked if they felt that they competed with the other players. Thoughts and statements like that made the experience more fun and rewarding, and provoked some interesting new perspectives. 
+%\note{Skrive litt om hvordan det var å jobbe med et stort prosjekt aleine. Hvordan veildeningen gikk og påvirket arbeidet. Hva jeg har lært fra prosjektet, og litt om hvordan det var å jobbe med/utvikle spill for barn.}
 %Hvordan var det å jobbe aleine
 %alf inge hjalp ganske bra
 %Hva har jeg lært fra dette
