--- a/doc/report/conclusion/chp_further_work.tex
+++ b/doc/report/conclusion/chp_further_work.tex
@@ -1,13 +1,22 @@
 \chapter{Further Work}
 \label{chp:further_work}
-This final chapter ends the thesis by providing a list of areas for further work.
-\note{burde disse punktene utvides mer? har du noen forslag til nye punkter?}
+This final chapter brings the thesis to a close by providing a list of areas for further work.
 \begin{itemize}
-	\item Improving the game prototype by addressing the issues discussed in Section \ref{sec:eval_game}.
-	\item Adding new items and features to the game prototype.
-	\item Trying out various interaction devices to se how the dynamics of the game and social interaction are affected.
-	\item Exploring various platforms like mobile gaming.
-	\item Conducting more experiments with a larger group of children.
-	\item Exploring other target audiences, for example adults, and conducting experiments.
-	\item Release and distribute the game.
+	\item Improving the game prototype by addressing the issues that were revealed after the testing. As made apparent by the analysis of the results, the game was lacking in some areas, for instance in providing an adequate challenge for the children and making the goal of the game clear.
+	
+	\item Adding new items and features to the game prototype. The game prototype could be expanded with new features and game elements to make it into a complete game. Adding common video game features like menus, a story, and a narrative are also a great way to enhance the game experience.
+	
+	\item Creating custom graphics and audio for the game. The game prototype uses free online assets for the graphics and audio, but other options are available. By working with graphical and sound designers the game experienced could be even more enhanced and custom tailored.
+	
+	\item Trying out various interaction devices to see how the dynamics of the game and social interaction are affected. The game prototype was originally going to use a PlayStation Move controller for one of the players; it would have been interesting to see how different interaction devices would affect the children's experience with the game.
+	
+	\item Conducting further research on how collaboration in video games can be used to improve children's collaboration and interaction skills in other areas, such as working in group projects. This would be an exciting area for research, and could potentially be used by schools to aid in teaching the children how to work together.
+	
+	\item Exploring various platforms like mobile gaming. Game engines make it easy to develop a game for multiple platforms simultaneously, and creating a mobile version of the game could provide a different experience and allow for new and innovative ways of interacting with the game elements.
+	
+	\item Conducting more experiments with larger groups of children. More experimentation could be done to confirm or challenge the findings in this thesis, and to discover new ways in which to stimulate collaboration.
+	
+	\item Exploring other target audiences, for example adults, and conducting experiments. This thesis has focused on collaboration between children, but the game could also be modified to appeal to adults, as collaboration and social interaction can be a powerful motivator of video games.
+	
+	\item Release and distribute the game. The game is in a prototype stage right now, but it could be further developed into a full fledged game and released to the public. This study mentions ways of distributing games digitally and the process of releasing and distributing a game would be an valuable experience.
 \end{itemize}
