--- a/doc/report/experiment/chp_preparations.tex
+++ b/doc/report/experiment/chp_preparations.tex
@@ -10,7 +10,7 @@ Bente Sandø the leader of the after school programme for Buvik School was conta
 
 \section{Questionnaire}
 \label{sec:questionnaire}
-A questionnaire was developed in order to evaluate the results of the play testing. The questionnaire is based of the Gameflow framework \cite{sweetser2005gameflow}, and the questionnaire created by Fu et al \cite{fu2009egameflow}. The questions are divided into groups corresponding to the Gameflow categories: Concentration, Goal Clarity, Feedback, Challenge, Autonomy, Immersion, Social Interaction, and Game Enjoyment. The final version of the questionnaire can be seen in Table \ref{tab:questions}. The questions were tailored towards children by simplifying them and making them easier to understand. Gameflow is discussed in Section \ref{immersionGameflow}.
+A questionnaire was developed in order to evaluate the results of the play testing. The questionnaire is based of the Gameflow framework \cite{sweetser2005gameflow}, and the questionnaire created by Fu et al \cite{fu2009egameflow}. The questions are divided into groups corresponding to the Gameflow categories: Concentration, Goal Clarity, Feedback, Challenge, Autonomy, Immersion, Social Interaction, and Game Enjoyment. The final version of the questionnaire can be seen in Table \ref{tab:questions}. The questions were tailored towards children by simplifying them and making them easier to understand. Gameflow is discussed in Section \ref{immersionGameflow}. The questions were given with a four-point rating scale. This was chosen, as opposed to a five-point scale or greater, to make it easier for the children to respond, and easier for the examiners to interpret their answers.
 
 Note: the questions were asked verbally to the children, in Norwegian, and their answers were logged by the interviewer. The original Norwegian questionnaire is included in Appendix \ref{apx:nor_questionnaire}.
 
