--- a/doc/report/experiment/chp_results_and_analysis.tex
+++ b/doc/report/experiment/chp_results_and_analysis.tex
@@ -4,8 +4,8 @@ This chapter presents the results of the play testing session along with observa
 
 
 \section{Results}
-Table \ref{tab:simple_results} shows the agreement and disagreement of the questions that were asked. For simplicity's sake, agreement and strong agreement have been aggregated, likewise with disagreement and strong disagreement.
-For more detailed information regarding the results, like statistical mean, variance and standard deviation of the questions from the questionnaire can be found in Appendix \ref{apx:stat_results}. The ages of the participants were ranging from six to nine years old with the composition being: six six year olds (32\%), five seven year olds (26\%), five eight year olds (26\%), and three nine year olds (16\%). Out of the total of 19 participants, 8 of them were female (42\%). Over half of the children told that they had a lot of prior game experience (58\%), seven said that they had some game experience (37\%), and one told that they had no prior game experience(5\%).
+Table \ref{tab:simple_results} shows the disagreement and agreement of the questions that were asked. For simplicity's sake, agreement and strong agreement have been aggregated, likewise with disagreement and strong disagreement.
+More detailed information regarding the results, like statistical mean, variance and standard deviation of the questions from the questionnaire can be found in Appendix \ref{apx:stat_results}. The results show that the children were generally very positive to the game and its features.  The ages of the participants were ranging from six to nine years old with the composition being: six six year olds (32\%), five seven year olds (26\%), five eight year olds (26\%), and three nine year olds (16\%). Out of the total of 19 participants, 8 of them were female (42\%). Over half of the children told that they had a lot of prior game experience (58\%), seven said that they had some game experience (37\%), and one told that they had no prior game experience (5\%).
 
 \begin{table}[]
 	\centering
@@ -13,37 +13,37 @@ For more detailed information regarding the results, like statistical mean, vari
 	\label{tab:simple_results}
 	\begin{tabularx}{\textwidth}{|l|X|l|l|}
 		\hline
-		\textbf{ID} & \textbf{Question}                                              & \textbf{Agree} & \textbf{Disagree} \\ \hline
-		\textbf{}   & \textbf{Concentration}                                         & \textbf{}      & \textbf{}         \\ \hline
-		Q1          & I am concentrated when playing the game                        & 100,00\%       & 0,00\%            \\ \hline
-		\textbf{}   & \textbf{Goal Clarity}                                          & \textbf{}      & \textbf{}         \\ \hline
-		Q2          & It was easy to understand the goal of the game                 & 52,63\%        & 47,37\%           \\ \hline
-		\textbf{}   & \textbf{Feedback}                                              & \textbf{}      & \textbf{}         \\ \hline
-		Q3          & It is easy to understand when I do something wrong in the game & 78,95\%        & 21,05\%           \\ \hline
-		Q4          & It is easy to understand when I do something correct in the game& 89,47\%        & 10,53\%           \\ \hline
-		Q5          & I liked the graphics of the game                               & 100,00\%       & 0,00\%            \\ \hline
-		Q6          & I liked the sounds of the game                                 & 78,95\%        & 21,05\%           \\ \hline
-		\textbf{}   & \textbf{Challenge}                                             & \textbf{}      & \textbf{}         \\ \hline
-		Q7          & I get bored when playing the game                              & 10,53\%        & 89,47\%           \\ \hline
-		Q8          & The game was too easy                                          & 15,79\%        & 84,21\%           \\ \hline
-		Q9          & The game was adequately difficult                              & 57,89\%        & 42,11\%           \\ \hline
-		Q10         & The game was too hard                                          & 36,84\%        & 63,16\%           \\ \hline
-		Q11         & My skill gradually improved when playing the game              & 89,47\%        & 10,53\%           \\ \hline
-		\textbf{}   & \textbf{Autonomy}                                              & \textbf{}      & \textbf{}         \\ \hline
-		Q12         & I felt in control of the movements of the player               & 68,42\%        & 31,58\%           \\ \hline
-		Q13         & I could recover from errors I made in the game                 & 68,42\%        & 31,58\%           \\ \hline
-		\textbf{}   & \textbf{Immersion}                                             & \textbf{}      & \textbf{}         \\ \hline
-		Q14         & Time goes by fast when plaing the game                         & 84,21\%        & 15,79\%           \\ \hline
-		Q15         & I become unaware of my surroundings when playing the game      & 89,47\%        & 10,53\%           \\ \hline
-		\textbf{}   & \textbf{Social Interaction}                                    & \textbf{}      & \textbf{}         \\ \hline
-		Q16         & I was competing with others to reach the furthest              & 31,58\%        & 68,42\%           \\ \hline
-		Q17         & It was important to communicate when playing the game          & 100,00\%       & 0,00\%            \\ \hline
-		Q18         & It was important to cooperate when playing the game            & 100,00\%       & 0,00\%            \\ \hline
-		Q19         & I cooperated well with the other player                        & 89,47\%        & 10,53\%           \\ \hline
-		Q20         & The other player cooperated well with me                       & 89,47\%        & 10,53\%           \\ \hline
-		\textbf{}   & \textbf{Game Enjoyment}                                        & \textbf{}      & \textbf{}         \\ \hline
-		Q21         & I enjoyed playing the game                                     & 100,00\%       & 0,00\%            \\ \hline
-		Q22         & I would like to play this game at home                         & 100,00\%       & 0,00\%            \\ \hline
+		\textbf{ID} & \textbf{Question}                                              & \textbf{Disagree} & \textbf{Agree} \\ \hline
+		& \textbf{Concentration}                                         &                   &                \\ \hline
+		Q1          & I am concentrated when playing the game                        & 0,00\%            & 100,00\%       \\ \hline
+		& \textbf{Goal Clarity}                                          &                   &                \\ \hline
+		Q2          & It was easy to understand the goal of the game                 & 47,37\%           & 52,63\%        \\ \hline
+		& \textbf{Feedback}                                              &                   &                \\ \hline
+		Q3          & It is easy to understand when I do something wrong in the game & 21,05\%           & 78,95\%        \\ \hline
+		Q4          & It is easy to understand when I do something good in the game  & 10,53\%           & 89,47\%        \\ \hline
+		Q5          & I liked the graphics of the game                               & 0,00\%            & 100,00\%       \\ \hline
+		Q6          & I liked the sounds of the game                                 & 21,05\%           & 78,95\%        \\ \hline
+		& \textbf{Challenge}                                             &                   &                \\ \hline
+		Q7          & I get bored when playing the game                              & 89,47\%           & 10,53\%        \\ \hline
+		Q8          & The game was too easy                                          & 84,21\%           & 15,79\%        \\ \hline
+		Q9          & The game was adequately difficult                              & 42,11\%           & 57,89\%        \\ \hline
+		Q10         & The game was too hard                                          & 63,16\%           & 36,84\%        \\ \hline
+		Q11         & My skill gradually improved when playing the game              & 10,53\%           & 89,47\%        \\ \hline
+		& \textbf{Autonomy}                                              &                   &                \\ \hline
+		Q12         & I felt in control of the movements of the player               & 31,58\%           & 68,42\%        \\ \hline
+		Q13         & I could recover from errors I made in the game                 & 31,58\%           & 68,42\%        \\ \hline
+		& \textbf{Immersion}                                             &                   &                \\ \hline
+		Q14         & Time goes by fast when plaing the game                         & 15,79\%           & 84,21\%        \\ \hline
+		Q15         & I become unaware of my surroundings when playing the game      & 10,53\%           & 89,47\%        \\ \hline
+		& \textbf{Social Interaction}                                    &                   &                \\ \hline
+		Q16         & I was competing with others to reach the furthest              & 68,42\%           & 31,58\%        \\ \hline
+		Q17         & It was important to communicate when playing the game          & 0,00\%            & 100,00\%       \\ \hline
+		Q18         & It was important to cooperate when playing the game            & 0,00\%            & 100,00\%       \\ \hline
+		Q19         & I cooperated well with the other player                        & 10,53\%           & 89,47\%        \\ \hline
+		Q20         & The other player cooperated well with me                       & 10,53\%           & 89,47\%        \\ \hline
+		& \textbf{Game Enjoyment}                                        &                   &                \\ \hline
+		Q21         & I enjoyed playing the game                                     & 0,00\%            & 100,00\%       \\ \hline
+		Q22         & I would like to play this game at home                         & 0,00\%            & 100,00\%       \\ \hline
 	\end{tabularx}
 \end{table}
 
@@ -54,8 +54,7 @@ This section describes some general observations that were made during the play 
 The majority of the children were very cooperative with each other and there were a lot of communication between them on things like how to conquer the different obstacles and what to do next. Learning the controls of the alien and the hand character was the focus of the first level, but the movement for the alien character was more complex, which led to some players wanting to switch controllers. However on the following levels the tasks for the hand character were more complicated and the players often wanted to switch back to the hand character. The game was possibly a little too hard for the children that we tested, as some were struggling to beat the first level.  Despite this, most of the children thought the game difficulty was adequate and all of the players thought that the game was fun and would like to play it at home.
 
 
-\section{Analysis }
-\note{alt nytt i dette delkapitlet}
+\section{Analysis}
 The results from the questionnaire will be analysed and grouped into the different Gameflow elements that the questionnaire is based on. Then some differences in the children's background will be discussed and how that affected the results.
 
 \subsection{Concentration}
@@ -77,7 +76,7 @@ About two thirds of the participants said that they felt in control of the playe
 Most of the participants got immersed in the game and agreed that time went by quickly when playing the game. The majority also primarily focused on the game, and became unaware of their surroundings. Some participants however were interested in the other pair that was playing and got a little distracted by trying to see how far the other players had come. Overall the game seemed to grab the attention of the participants.
 
 \subsection{Social Interaction}
-The social interaction between the participants was good. They all agreed that it was important to communicate and cooperate when playing the game. The participants were eager to communicate, and provide directions and help to each other. One of the pairs that performed the best had a very direct form of communication by issuing commands to each other, like "stand there" and "grab that". There were also a lot of pointing to the screen to tell the other player where to stand or place a block and similar. Being a collaborative game it was not very surprising to se that most did not se the game as a competition. However, some participants said that they did feel like they were competing against others to get the furthest. This was also made apparent when some participants would ask us how far some other players had made it, and some even stayed to see how the other participants did.
+The social interaction between the participants was good. They all agreed that it was important to communicate and cooperate when playing the game. The participants were eager to communicate, and provide directions and help to each other. One of the pairs that performed the best had a very direct form of communication by issuing commands to each other, like "stand there" and "grab that". There were also a lot of pointing to the screen to tell the other player where to stand or place a block and similar. Being a collaborative game it was not very surprising to see that most did not see the game as a competition. However, some participants said that they did feel like they were competing against others to get the furthest. This was also made apparent when some participants would ask us how far some other players had made it, and some even stayed to see how the other participants did.
 
 \subsection{Game Enjoyment}
 All of the participants strongly agreed that they enjoyed playing the game. Though it would seem that the game is very fun to play, it is important to look at it from a broader perspective. This was a special occasion, and the children may not get to play that much video games in the after school program. Everyone seemed excited to even get a chance to play the game. The participants would also like to play the game at home, and some even asked where the game could be bought.
@@ -120,7 +119,7 @@ Unfortunately, half of the female participants played on the laptop that had a c
 \end{table}
 
 \subsection{Game Experience}
-Out of the total 19 participants, eleven responded that they had a lot of prior game experience, seven said that they had some game experience, and one said that they had no prior game experience. Table \ref{tab:game_experience} shows the effect of game experience on the results. About half of the participants with a lot of gaming experience were male (55\%male), and about half of the participants with some gaming experience were male (57\% male). This means that the gender differences will not influence the results to a great degree. Because there was only one participant with no prior game experience their results will either be agree (100\%) or disagree(0\%), which is important to keep in mind when comparing the results. 
+Out of the total 19 participants, eleven responded that they had a lot of prior game experience, seven said that they had some game experience, and one said that they had no prior game experience. Table \ref{tab:game_experience} shows the effect of game experience on the results. About half of the participants with a lot of gaming experience were male (55\%male), and about half of the participants with some gaming experience were male (57\% male). This means that the gender differences will not influence the results to a great degree. Because there was only one participant with no prior game experience their results will either be agree (100\%) or disagree (0\%), which is important to keep in mind when comparing the results. 
 
 Understandably the participants with more game experience found it easier to understand the goal of the game. This could come from their familiarity with side scrollers.
 The participants with a lot of game experience seemed to enjoy the sounds of the game less, however both of the participants that played without sound stated that they had a lot of game experience. When disregarding those two participants the results are a lot more similar with a difference of only two percentage points.
