--- a/doc/report/init/abstract_norwegian.tex
+++ b/doc/report/init/abstract_norwegian.tex
@@ -1,2 +1,11 @@
+% !TeX spellcheck = nb_NO
+\begin{otherlanguage}{norsk}
 \chapter*{Sammendrag}
-\note{Oversett fra engelsk abstract.}
+Barn blir i dag introdusert til spill i en veldig ung alder, i form av smart-telefoner, tablets, og datamaskiner. Sosial interaksjon spiller en stor rolle i hvorfor vi spiller spill, og er en måte vi bruker for å sosialisere med venner og fremmede. Denne masteroppgaven vil utforske disse områdene ved å utvikle et spil som fokuserer på sosial interaksjon for å oppfordre til samarbeid blant barn.
+
+Hoved-forskningsmålene i denne masteroppgaven gikk ut på å lage en spillprototype som fokuserer på sosial interaksjon og samarbeid, å utføre et eksperiment hvor spillet ble testet med barn, og å utforske hvilke teknologier som er tilgjengelig for, og prosessen bak, spillutvikling. For å nå disse målene ble det gjennomført en litteraturstudie for å se på teknologier og aspekter ved spillutvikling, en spillprototype ble designet og utviklet, og en analyse av observasjoner og resultater fra testingen av spillprototypen ble gjennomført.
+
+Disse metodene ble brukt for å komme frem til hovedfunnene til denne oppgaven. Det å la spillerne ha forskjellige roller, skapte et bånd hvor de ble avhengige av hverandre, noe som drev samarbeidet i spillet. Puslespill elementer, og de unike spillelementene i spillprototypen, var med på oppfordre til sosial interaksjon blant barna, hvor de måtte kommunisere for å komme seg videre i spillet. Spilltestingen var en suksess, alle barna syntes det var gøy å spille et spill hvor samarbeid var i fokus, og de forstod viktigheten med å samarbeide i spillet. Spillutvikling er en komplisert prosess, men det finnes gode verktøy som spillmotorer for å hjelpe med ordinære spillrelaterte oppgaver.
+
+Denne masteroppgaven er nyttig for både ambisiøse og erfarne spillutviklere, siden den utforsker spillteknologier og konsepter, og gir innblikk i prosessen for spillutvikling. Spillprototypen, dens design, og resultatene fra eksperimentet tilbyr en kilde til inspirasjon og empirisk data for forskning og spillutvikling. Resultatene viser at det å bruke samarbeid som fokus i spill har potensiale for videre forskning og kan potensielt brukes som et hjelpemiddel for å lære barn viktige ferdigheter som samarbeid og sosial interaksjon.
+\end{otherlanguage}
