--- a/doc/report/init/glossaries.tex
+++ b/doc/report/init/glossaries.tex
@@ -28,3 +28,6 @@
 \newacronym{rts}{RTS}{Real Time Strategy}
 \newacronym{ir}{IR}{infrared}
 \newacronym{dpad}{D-pad}{Directional pad}
+
+\newacronym{ide}{IDE}{Integrated Development Environment}
+\newacronym{api}{API}{Application Programming Interface}
