--- a/doc/report/init/titlepage.tex
+++ b/doc/report/init/titlepage.tex
@@ -5,7 +5,7 @@
 	%\vspace{1cm}
 	{\scshape\Large TDT4900 - Computer Science, Master's Thesis\par}
 	\vspace{1.5cm}
-	{\huge\bfseries \uppercase{A collaborative game for children} \\ 
+	{\LARGE\bfseries \uppercase{Exploring collaboration in video games for children} \\ 
 	\Large Game Prototype and Experiment\par}
 %collaborative gameplay for children - game concept and evaluation
 	\vspace{2cm}
@@ -17,5 +17,5 @@
 	\vfill
 	
 	% Bottom of the page
-	{\large Autumn 2015}
+	{\large June 2016}
 \end{titlepage}
