--- a/doc/report/introduction/chp_introduction.tex
+++ b/doc/report/introduction/chp_introduction.tex
@@ -7,20 +7,21 @@ Today's technology makes it so that individuals and small teams can create video
 
 Proprietary input devices like motion controls for video game consoles mostly use standard communication protocols like USB or Bluetooth, which can be used to interface with a computer with the help of official and unofficial driver software. 
 
-Social interaction is a big part of video games, with most games including a multiplayer mode, either local or online. Gaming can be a way to socialize with strangers to create new friendships, or with friends to strengthen (or ruin) friendships. It would be interesting to se how children can interact with each other when playing a collaborative game designed to encourage social interaction and stimulate collaboration.
+Social interaction is a big part of video games, with most games including a multiplayer mode, either local or online. Gaming can be a way to socialize with strangers to create new friendships, or with friends to strengthen (or ruin) friendships. Moreover, social interaction in games can also be used to stimulate and teach children collaboration, and this is an area this project will explore. Potentially, social games can be used in schools to train children to improve their collaboration skills, which later can boost their skills working in groups in projects
 
 These are exciting areas for research that this thesis will delve into.
 
 \section{Context}
-This report is an extension of work done in a specialization project where I and Kjell R. Elstad explored different game technologies and concepts that goes into creating innovative video games. I was interested and continuing this work and to create a game prototype of one of the game concepts that were created in the specialization project.
+This report is an extension of work done in a specialization project where I and Kjell R. Elstad explored different game technologies and concepts that goes into creating innovative video games. I was interested and continuing this work and to create a game prototype of one of the game concepts that were created in the specialization project \cite{hovind2015alternative}.
+
+The finished game prototype, and the full source code, as well as binaries for running the game on Windows, is available on GitHub at: \\
+\url{https://github.com/Daveiac/Master}
 
 
 \section{Motivation}
 Video games have always been a big part in my life. I grew up playing video games and I still do on a daily basis. Having played a lot of video games, I am excited to specialize in a project where I can create my own video game and explore different game technologies and concepts.
 
-With the evolution of game technology video games have become accessible for anyone, and children are more exposed to video games from early childhood. I want to create a video game for children that forces them to work together, and encourages social interaction between the players. I want to expose children to a new kind of gameplay, where the players are dependent on each other in order to succeed.
-
-\note{La til den andre paragrafen}
+With the evolution of game technology video games have become accessible for anyone, and children are more exposed to video games from early childhood. I want to create a video game for children with the focus on collaboration, and encourages social interaction between the players. I want to expose children to a new kind of gameplay, where the players are dependent on each other in order to succeed.
 
 
 \section{Problem Description}
@@ -33,7 +34,7 @@ The following problem description is based on the an earlier version given for t
 \end{displayquote}
 
 This master's thesis will include a literature study, the creation of a game prototype, and the play testing of this prototype on real users.
-\note{Har skrevet om problembeskrivelsen litt for å inkludere barn og div.}
+
 
 \section{Structure}
 The structure of this thesis is divided into five parts which roughly correspond to the order of phases that this project went through.
@@ -43,15 +44,15 @@ The structure of this thesis is divided into five parts which roughly correspond
 	The introduction provides the context and motivation behind the project, the problem statement and the structure of this report.
 	
 	\item[Part II: Literature Study]
-	The literature study will look into games history, various interaction devices, game immersion, and game development technologies.
+	The literature study presents a background of the evolution of game technology, various interaction devices, game immersion, and game development technologies.
 	
 	\item[Part III: Design and Implementation]
 	The design and implementation part describes the design, architecture and implementation of the game prototype.
 	
 	\item[Part IV: Experimentation]
-	The experimentation part presents the planning, execution, and results of the play testing that was performed.
+	The experimentation part provides details of the planning, execution, and results of the play testing that was performed.
 	
 	\item[Part V: Evaluation and Conclusion]
-	The final part concludes the thesis with an evaluation of the project, a conclusion, and a list of areas for further work.
+	The final part concludes the thesis with an evaluation of the research, a conclusion, and a list of areas for further work.
 	
 \end{description}
