--- a/doc/report/introduction/chp_methodology.tex
+++ b/doc/report/introduction/chp_methodology.tex
@@ -1,18 +1,16 @@
 \chapter{Methodology}
 The research method used in this project is based on the \gls{gqm} approach \cite{1992basili}, where firstly a research goal is defined (conceptual level), secondly the goal is decomposed into research questions (operational level), and lastly the research questions are described by a set of metrics that answers the research questions (quantitative level). Through the GQM approach three main research goals will be specified which represents the areas that will be investigated and drive the research through this thesis.
 
-\note{Har endra litt her, spesielt RG1 + RQs til RG1. Fokuserer litt mer på social interaction, ikke så mange RQs som er like.}
-
 
 \section{Research Goals}
-The following research goals were developed using the template for research goals of the \gls{gqm} framework.
+The following research goals were developed using the template for research goals of the \gls{gqm} framework. This thesis focuses on three different aspects of creating a collaborative video game for children. The focus on the first goal is the creation of the game prototype. The motivation behind the second goal is to observe and capture children's experience with the game prototype. The third and final goal seeks to discover what goes into game development and what tools are available for an independent developer.
 
 \begin{description}
 	\item[RG1:] The purpose of this project is to create a collaborative game prototype which promotes collaboration and social interaction from the point of view of a game designer in the context of video game design.
 	
 	\item[RG2:] The purpose of this project is to see how children experience a collaborative game where the focus is on collaboration and social interaction from point of view of the children in the context of playing video games.
 	
-	\item[RG3:] The purpose of this study is to investigate what tools are available to create video games from the point of view of an independent developer in the context of video game design. 
+	\item[RG3:] The purpose of this project is to investigate what tools are available to create video games from the point of view of an independent developer in the context of video game design. 
 \end{description}
 
 %En utfordring: Begge spillerene har forskjellige roller, men begge er aktive.
@@ -28,7 +26,7 @@ The following research goals were developed using the template for research goal
 \section{Research Questions}
 The research goals are broken down into research question according to the \gls{gqm} framework.
 \subsection{Research Goal 1: Collaborative Game}
-These research questions focuses on the creation of a video game that stimulates collaboration and encourages social interaction between players.
+These research questions focuses on the creation of a video game that stimulates collaboration and encourages social interaction between players. when creating the game prototype it is important to find out how the game can be designed, and what different game aspects can encourage social interaction and collaboration.
 
 \begin{description}
 	\item[RQ1.1:] What game mechanics are suitable for stimulating collaboration between players?
@@ -42,7 +40,7 @@ These research questions focuses on the creation of a video game that stimulates
 \end{description}
 
 \subsection{Research Goal 2: Children's Experience}
-The intention of these research questions is to study find out how children will experience a video game where social interaction and collaboration is encouraged.
+The intention of these research questions is to study find out how children will experience a video game where social interaction and collaboration is encouraged. A play test of the game prototype will be performed and these research questions will help guide the methods for observation and analysis of the testing.
 
 \begin{description}
 	\item[RQ2.1:] Is a collaborative game that encourages social interaction engaging for children?
@@ -55,7 +53,7 @@ The intention of these research questions is to study find out how children will
 \end{description}
 
 \subsection{Research Goal 3: Game Development}
-These last research questions focuses on the development of a video game and what tools are available for independent video game developers.
+These last research questions focuses on the development of a video game and what tools are available for independent video game developers. The research and process that goes into creating the game prototype will be documented to get a better view of the process and technology available for an independent developer.
 \begin{description}
 	\item[RQ3.1] What tools are available for developing video games as an independent developer.
 	
@@ -69,16 +67,31 @@ These last research questions focuses on the development of a video game and wha
 
 \section{Process}
 %litteratur studie:
-This section explains the different methods used in this project to be able to answer the research questions. 
+This section explains the different methods used in this project to be able to answer the research questions. The \gls{gqm} model advises the use of quantitative data, but most of the questions will be answered with qualitative data gathered from the research, development and experience. This is due to the openness of the research questions. Table \ref{tab:method} gives an overview of the metrics used in answering the research questions.
+\begin{table}[!ht]
+	\label{tab:method}
+	\caption{overview of the metrics for the research questions}
+	\begin{tabularx}{\textwidth}{|l|X|}
+		\hline \textbf{Question} & \textbf{Metrics} \\ 
+		\hline RQ1.1 & Development of game prototype. Observations and results from play test. \\ 
+		\hline RQ1.2 & Development of game prototype. Observations and results from play test. \\ 
+		\hline RQ2.1 & Observations and analysis from the play test. Results and analysis of the questionnaire. \\ 
+		\hline RQ2.2 & Observations and analysis from the play test. Results and analysis of the questionnaire. \\ 
+		\hline RQ3.1 & Literature study. \\ 
+		\hline RQ3.2 & Experience with development of the game prototype. \\ 
+		\hline 
+	\end{tabularx} 
+\end{table}
+
 
 \subsection{Literature Study}
-A literature study will be conducted which will explore different aspects of video game development. This includes first, an evolution of game technology to provide context and background for the technologies and concepts used in the video game industry. Second, interaction devices to give an insight into how player can interact with video games and to find interesting interaction devices to be used with the game prototype. Third, immersion in order to be able to create an immersive game and also to help with the questionnaire. Last, game development technologies in order to understand what options are available and to answer research questions RQ3.1 and RQ3.2. The litterature study can be found in Part \ref{prt:study}.
+A literature study will be conducted which will explore different aspects of video game development. This includes first, an evolution of game technology to provide context and background for the technologies and concepts used in the video game industry. Second, interaction devices to give an insight into how player can interact with video games and to find interesting interaction devices to be used with the game prototype. Third, immersion in order to be able to create an immersive game and also to help with the questionnaire. Last, game development technologies in order to understand what options are available and to answer research question RQ3.1, but will also be used to gain information to help build the game prototype and how to evaluate it. The literature study can be found in Part \ref{prt:study}.
 
 \subsection{Game Prototype}
-A game prototype will be created to be able to test how children will respond to a collaborative game. This game prototype will feature two players with different roles that need to work together to reach the goal. The focus of the game prototype will be to encourage social interaction between the players. The prototype will be developed using tools, interaction devices, and concepts based on the literature study. The focus of the development will be to create a prototype that is easily modifiable to add new features, and the gameplay must be simple enough for children to understand and play. The development of the game prototype will be the main way of answering the research questions RQ1.1 and RQ1.2. Details about the implementation and design of the game prototype can be found in Part \ref{prt:prototype}.
+A game prototype will be created to be able to test how children will respond to a collaborative game. This game prototype will feature two players with different roles that need to work together to reach the goal. The focus of the game prototype will be to encourage social interaction between the players. The prototype will be developed using tools, interaction devices, and concepts based on the literature study. The focus of the development will be to create a prototype that is easily modifiable to add new features, and the gameplay must be simple enough for children to understand and play. The development of the game prototype will be the main way of answering the research questions RQ1.1, RQ1.2, and RQ3.2. Details about the implementation and design of the game prototype can be found in Part \ref{prt:prototype}.
 
-\subsection{Play Testing and Questionnaire}
-A play testing session with a group of children will be conducted, accompanied by a questionnaire that will help with the evaluation of the game prototype. A questionnaire was chosen to ask all the participants the same questions in order to get answers in a quantitative form that can easily be analysed. The observations from the play testing and results from the questionnaire will be used in the answering of research questions RQ2.1 and RQ2.2. More details about the play testing in Part \ref{prt:testing}, and a more detailed description of the questionnaire can be found in Section \ref{sec:questionnaire}.
+\subsection{Play Testing, Data Collection and Analysis}
+A play testing session with a group of children will be conducted, accompanied by a questionnaire that will help with the evaluation of the game prototype. A questionnaire was chosen to ask all the participants the same questions in order to get answers in a quantitative form that can easily be analysed. The observations from the play testing and results from the questionnaire will primarily be used in the answering of research questions RQ2.1 and RQ2.2, but will also help to answer RQ1.1 and 1.2. More details about the play testing in Part \ref{prt:testing}, and a more detailed description of the questionnaire can be found in Section \ref{sec:questionnaire}.
 
 
 
