--- a/doc/report/references.bib
+++ b/doc/report/references.bib
@@ -740,3 +740,13 @@
 	year={2016},
 	note = "\url{http://www.jewelbeat.com/free/free-sound-effects-1.php}, accessed 2016-06-13",
 }
+
+@techreport{hovind2015alternative,
+	title={Alternative Games - Innovations in Video Games and Game Technologies},
+	author={David Hovind and Kjell R. Elstad},
+	year={2015},
+	month={12},
+	institution={Department of Computer and Information Science - Norwegian University of Science and Technology}
+}
+
+
