--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -3,7 +3,7 @@
 % !TeX program = xelatex
 
 \documentclass[12pt, a4paper]{book}
-\usepackage[english]{babel}
+\usepackage[norsk, english]{babel}
 %\usepackage[utf8]{inputenc}
 \usepackage{fontspec}
 \usepackage{titlesec}
@@ -28,6 +28,7 @@
 \usepackage[toc, page]{appendix}
 \PassOptionsToPackage{hyphens}{url}\usepackage[hidelinks]{hyperref}
 
+\selectlanguage{english}
 \makeatletter
 \titleformat{\part}[display]
 {\Huge\scshape\centering}
