--- a/doc/report/study/chp_games_history.tex
+++ b/doc/report/study/chp_games_history.tex
@@ -1,7 +1,7 @@
 \chapter{Evolution of Game Technology}
 %entertainment games...
 \label{ch:gameshistory}
-This chapter will explore the background of different video game technologies and how the industry has evolved. Games are being played by different kinds of people all over the world, and games can now be developed by a single person and reach these people through the internet. This chapter serves to give some information on how this came to be. The research presented here is based on work done by Overmars \cite{overmars2012}.
+This chapter will explore the background of different video game technologies and how the industry has evolved. Games are being played by different kinds of people all over the world, and games can now be developed by a single person and reach these people through the internet. This chapter serves to give some information on how this came to be. The majority of the research presented here was conducted for the specialization project \cite{hovind2015alternative}, and is based on work done by Overmars \cite{overmars2012}.
 
 \section{Casual Gaming}
 \label{sec:casualgaming}
@@ -9,22 +9,22 @@ This chapter will explore the background of different video game technologies an
 Video games had been primarily for the dedicated gamer, but during the 2000s there was a rise in casual games. With more households having faster internet connections and more people using computers, video games became more accessible to people that were not traditionally gamers. Many of the games were played in the browser and was financed by ad revenue alone. A key example is the highly successful game Bejeweled (2001). Another trend was games on Facebook, like Farmville (2009) which had over 80 million users in 2012.
 
 % SmartPhones
-With the introduction of the iPhone (2007), the mobile gaming market started to blossom. The most important factor was the App Store which allowed every developer to create games and sell them through Apples store. This made it possible for individuals and small teams of developers to develop games that could reach millions of users. The amount of content grew and games were sold for USD 1; some games were even free and supported by ad revenue. Apple got some competition in 2008 when the android mobile operating system hit the market. With phones created by Samsung HTC and Sony, android quickly became popular and even had its own application market similar to the App Store, called Android Market \cite{2015android}. The most popular game for the smart phones is Angry birds (pictured in Figure \ref{fig:angrybirds}), which had been downloaded over three billion times as of july 2015 \cite{2015forbes}. One of the reasons for its big success is its freemium model, where the game is initially free, but supports in-app purchases and displays advertisements.
+With the introduction of the iPhone (2007), the mobile gaming market started to blossom. The most important factor was the App Store which allowed every developer to create games and sell them through Apples store. This made it possible for individuals and small teams of developers to develop games that could reach millions of users. The amount of content grew and games were sold for USD 1; some games were even free and supported by ad revenue. Apple got some competition in 2008 when the android mobile operating system hit the market. With phones created by Samsung HTC and Sony, android quickly became popular and even had its own application market similar to the App Store, called Android Market \cite{2015android}. The most popular game for the smart phones is Angry birds (pictured in Figure \ref{fig:angrybirds}), which had been downloaded over three billion times as of July 2015 \cite{2015forbes}. One of the reasons for its big success is its freemium model, where the game is initially free, but supports in-app purchases and displays advertisements.
 
-\hfigure{angrybirds}{Angry Birds, the most downloaded game for smart phones}{0.7}
+\hfigure{angrybirds}{Angry Birds, the most downloaded game for smart phones}{1}
 
 \section{Motion Controls}
 Nintendo was the company that pioneered motion controls for the consoles. They chose to create a less powerful console, the \gls{wii} in 2006, and catered to a more casual audience with cartoonish graphics, and games geared toward children. They also created a new controller, the Wiimote, that looked like a remote that could track the player's arm and hand movements (more about this controller in Section \ref{wiimote}). The most popular game was Wii Sports, shown in Figure \ref{fig:wiisports} that featured a collection of sports games that used the motion controller to play. Nintendo was more successful than the other consoles and had sold over 100 million consoles worldwide as of June 2014 \cite{2014nintendo}.
 
 Microsoft and Sony saw the success of the \gls{wii} and created their own motion control systems. Microsoft created a camera system that tracked the full body of the player, called the Kinect in 2010. Sony made a device similar to the Wiimote in 2010, called the Playstaton Move. The Move is a handheld remote like controller with a coloured light at the end and a camera to track the controller in 3D space. More information about the motion control devices in Chapter \ref{chap:interaction}.
 
-\hfigure{wiisports}{Wii Sports, a popular motion controlled game}{0.7}
+\hfigure{wiisports}{Wii Sports, a popular motion controlled game}{1}
 
 \section{Current Generation of Consoles}
 % XBONE, PS4, WiiU
 Nintendo started what is considered the current generation of consoles with the \gls{wiiu} as a successor to the \gls{wii} in 2012. The \gls{wiiu} features a tablet like gamepad with a 6 inch touch screen, motion sensors, and traditional buttons and joysticks \cite{2015wiiu}. Unlike the Wii, the \gls{wiiu} does have HD graphics, but it is still the least powerful of the current generation of consoles \cite{2015ign}. Nintendo's primary target audience is still children, and Nintendo has created a line of physical game accessories called amiibo. Amiibo, illustrated in Figure \ref{fig:amiibo}, are toys like figures and cards that can interact with the games and provide special functionality like an extra character, special items, and new adventures \cite{2015amiibo}. 
 
-\hfigure{amiibo}{An amiibo figure interacting with the Wii U gamepad}{0.7}
+\hfigure{amiibo}{An amiibo figure interacting with the Wii U gamepad}{1}
 
 Microsoft and Sony released their consoles at the same time for the 2013 holiday season. Microsoft's \gls{xbone} focused on creating an all-in-one home entertainment experience, hence the name. The \gls{xbone} can rent films, or play live television using an interactive TV guide. The \gls{xbone} also features Kinect 2.0, a more powerful version of the motion control system for Xbox. Two of the top games for the \gls{xbone} at launch was Call of Duty Ghosts (pictured in Figure \ref{fig:codghosts}) and Forza Motorsport 5 \cite{2013independent}.
 
@@ -32,7 +32,7 @@ Sony focused on the games themselves and created a powerful console. The \gls{ps
 
 The \gls{xbone} and the \gls{ps4} have a lot of similar features. They both have the support for game streaming to Twitch and Ustream, and can record game clips as you play. Both consoles also support third party applications such as Netflix and YouTube. The consoles are becoming more about entertainment than just about the games. Gamers want to have access to the internet from their couch without having to use the computer. Downloadable games is also a popular feature, where all the games are available as a digital download instead of buying a game disc \cite{2015ign}. Even though the \gls{xbone} and \gls{ps4} support the motion control systems from the previous generation, they never really reached the success of the WiiMote. In recent years these motion control system have started to fade in popularity, but some niche areas still remain, such as fitness, dance, and party games \cite{2015gameon, 2014hardcore, 2014sciencebeta}.
 
-\hfigure{codghosts}{Call of Duty Ghosts, a popular launch title for the Xbox One and PlayStation 4}{0.7}
+\hfigure{codghosts}{Call of Duty Ghosts, a popular launch title for the Xbox One and PlayStation 4}{1}
 
 \section{Digital Distribution}
 Downloading the games from the internet via the built in store of the console was something that was introduced with the \gls{xb360} and \gls{ps3}, however not all titles were available for digital download. With \gls{ps4} and \gls{xbone} though, all disc titles are also available for digital download. This makes buying games less of a hassle, because you don't have to go to a physical store and you can buy it whenever you want. It is also possible to pre-order and pre download titles so that they are ready to play on the release date \cite{2015msstore, 2015psstore}.
@@ -51,6 +51,4 @@ Video game consoles have become more of a home entertainment device with the abi
 %digital
 In recent years there has been a shift towards digital distribution which has enabled independent game developers to create games for the masses.
 
-It is interesting to see the shift towards more casual gaming and the fact that independent developers can create games for the newest game consoles and the PC. This is helpful for the project because the technology has evolved in such a way to make it possible for a single developer to create a video game to be played on the PC or the newest game consoles.
-
-\note{Prøvde å legge til litt her for å binde det litt mer opp mot oppgaven.}
+It is interesting to see the shift towards more casual gaming and the fact that independent developers can create games for the newest game consoles and the PC. This is helpful for the project because the technology has evolved in such a way to make it possible for a single developer to create a video game to be played on the PC or the newest game consoles. In this project the most relevant findings from this chapter include how I can utilize casual game concepts which will both be familiar and entertaining to the players.
