--- a/doc/report/study/chp_immersion.tex
+++ b/doc/report/study/chp_immersion.tex
@@ -1,16 +1,12 @@
 \chapter{Immersion}
 \label{ch:immersion}
-% TODO update intro
-% CONSIDER adding a section for social/player interaction
-
-This chapter takes a look at different aspects of game immersion. There are many different parts required to make the player immersed in a game.
-At first glance, these usually involves a mix of visuals and audio.
-For console games, the use of haptic feedback is also common.
+This chapter takes a look at different aspects of game immersion and is based on research done in the specialization project \cite{hovind2015alternative}. There are many different parts required to make the player immersed in a game.
+At first glance, immersion usually involves a mix of visuals and audio and for console games, the use of haptic feedback is common.
 Other measures to keep the player immersed become apparent when looking deeper.
 One of these is through the setting and storyline of a game, and there are different ways for a storyline to unfold.
 If a game does not keep up with the standard set by the other game aspects, the suspense of disbelief may be broken \cite{overmars2012}. Social interaction is a big part of why we play video game, people use video games as a way to spend time with friends.
 
-Immersion is important when creating a game, and the information gathered here will be important when designing and developing the game prototype. The social interaction  section will be especially useful when creating the game prototype, because it will be one of the core concepts. Concepts from the Gameflow framework will also be important when creating questions for the questionnaire, because it is a useful framework for evaluating immersion.
+Immersion is important when creating a game, and the information gathered here will be important when designing and developing the game prototype. The social interaction section will be especially useful when creating the game prototype, because it is one of the core concepts for this project. Concepts from the Gameflow framework will also be important when creating questions for the questionnaire, because it is a useful framework for evaluating immersion.
 
 
 \section{GameFlow and Game Enjoyment}
@@ -20,7 +16,7 @@ This is where GameFlow becomes important, as a player who is experiencing gamefl
 The term GameFlow was introduced by Sweetser \cite{sweetser2005gameflow} to create a model for player enjoyment in video games.
 It is based on the term flow from Csikszentmihalyi, which is described as \textcquote{csikszentmihalyi1991flow}{so gratifying that people are willing to do it for its own sake, with little concern for what they will get out of it, even when it is difficult or dangerous}.
 
-The GameFlow model consists of eight core elements - concentration, challenge, skills, control, clear goals, feedback, immersion, and social interaction. Each of the elements have criteria that relate to Csikszentmihalyi's elements of flow. The GameFlow model was found as a useful tool for reviewing games and identifying issues that could affect game enjoyment. The core elements of the GameFlow model are described by Sweetser \cite{sweetser2005gameflow} as follows. 
+The GameFlow model consists of eight core elements - concentration, challenge, skills, control, clear goals, feedback, immersion, and social interaction. Each of the elements have criteria that relate to Csikszentmihalyi's elements of flow. The GameFlow model was found as a useful tool for reviewing games and identifying issues that could affect game enjoyment. The core elements of the GameFlow model are described by Sweetser \cite{sweetser2005gameflow} as follows: 
 \begin{description}
 \item[Concentration:] Games should require concentration and the player should be able to concentrate on the game without being distracted from tasks that they want or need to concentrate on. 
 \item[Challenge:] Games should be sufficiently challenging and match the players skill level, and the level of challenge should increase as the player progresses through the game. 
@@ -86,10 +82,10 @@ It is also worth noting that a player might be deaf or hard of hearing, which br
 
 In some games the audio can be a central part of the gameplay, as it is in the game 140 \cite{140game}, described by Double Fine as
 \textcquote{140doublefine}{A musical platformer with super tight puzzle design and a striking audiovisual presentation.}.
-The elements in the game is controlled by the music which, as the name might suggest, is playing at 140 pbm.
+The elements in the game is controlled by the music which, as the name might suggest, is playing at 140 beats per minute.
 Each element has it's own, recognizable sound that plays to the beat of the music, which means that the player can know the nature of the upcoming obstacles and challenges before they appear on screen.
-Figure \ref{fig:140} shows a screenshot from 140.
-\hfigure{140}{Screenshot of 140}{1}
+Figure \ref{fig:140} shows a screenshot from the game 140.
+\hfigure{140}{Screenshot of the game 140}{1}
 
 While audio is one of many aspects in most games, there exists games based solely on sound.
 The graphics are very simple or completely non-existent.
@@ -140,8 +136,7 @@ By giving the player a setting to the game and a storyline to play, they may fin
 This can be achieved by adding an overarching story, smaller stories, character progression, a game world, and other elements outside the core game concept.
 
 \section{Social Interaction}
-Social interaction is a part of the flow in Sweetser's GameFlow model \cite{sweetser2005gameflow}, but it can often interrupt the immersion in a game world by providing a link to the real world. However, social interaction plays a big part in video games and some people play games for the social interaction alone. Lazzaro \cite{lazzaro2004we} mentions social interaction as one of the four keys to emotion in their article on why we play video games. Many players get their enjoyment out of a game by playing with other people inside, and outside of the game. Players may even play games that they do not like, just to spend time with their friends. Some players use video games as a mechanism for social interaction. Multiplayer games are best at creating social interaction and games with both cooperative and competitive elements offer a wider variety of emotions in the players. Wang \cite{wang2015wear} showed how social interaction could be used in a game based student response system, Kahoot!, to better engage students in a lecture. They were able to improve the simple gameplay of a quiz format by including elements that encouraged social interaction among the students.
-\note{feedback?}
+Social interaction is a part of the flow in Sweetser's GameFlow model \cite{sweetser2005gameflow}, but it can often interrupt the immersion in a game world by providing a link to the real world. However, social interaction plays a big part in video games and some people play games for the social interaction alone. Lazzaro \cite{lazzaro2004we} mentions social interaction as one of the four keys to emotion in their article on why we play video games. Many players get their enjoyment out of a game by playing with other people inside, and outside of the game. Players may even play games that they do not like, just to spend time with their friends. Some players use video games as a mechanism for social interaction. Multiplayer games are best at creating social interaction and games with both cooperative and competitive elements offer a wider variety of emotions in the players. Wang showed how social interaction could be used in a game based student response system, Kahoot!, to better engage students in a lecture \cite{wang2015wear}. They were able to improve the simple gameplay of a quiz format by including elements that encouraged social interaction among the students.
 
 
 \section{Summary}
@@ -155,6 +150,4 @@ Giving the player a form of haptic feedback may also give a stronger sense of im
 
 Social interaction plays a big part in why we play video games. People even play games they dislike just to play with their friends. Competition and cooperation create emotions in players, which players use as a mechanism for social interaction.
 
-Immersion is an important part to keep in mind when developing video games and all of the different aspects described here will come into play when creating the game prototype. GameFlow seems like a good tool for reviewing a game, and seems to be a good model to base the questionnaire on. It is also important to keep in mind how social interaction affects games, since this is a core concept of this project.
-
-\note{Prøvde å styre det litt mer mot prosjektet, og fjernet litt unødig informasjon her.}
+Immersion is an important part to keep in mind when developing video games and all of the different aspects described here will come into play when creating the game prototype. In this project, th most important aspects learned from this chapter include GameFlow, as it seems like a good tool for reviewing a game, and could be a good model to base the questionnaire on. Social interaction, and how this affects games, is another important aspect, since this is a core concept of this project.
