--- a/doc/report/study/chp_interaction_devices.tex
+++ b/doc/report/study/chp_interaction_devices.tex
@@ -1,6 +1,6 @@
 \chapter{Interaction Devices}
 \label{chap:interaction}
-An important part of playing a game is being able to interact with it. The motivation for this chapter is to discover various interaction devices that could be used with the game prototype. This chapter will provide insight into what types of interaction devices can be used to interact with video games.
+An important part of playing a game is being able to interact with it. The motivation for this chapter is to discover various interaction devices that could be used with the game prototype. This chapter will provide insight into what types of interaction devices can be used to interact with video games. The research in this chapter is based on the research conducted for the specialization project \cite{hovind2015alternative}
 
 
 \section{Conventional Interaction Devices}
@@ -12,7 +12,7 @@ The versatile joystick has been an important part of fulfilling this need.
 A joystick, along with one or two buttons, was normal for the early consoles.
 Atari 2600 is one such example, shown in Figure \ref{fig:atari2600}.
 Later it has become a small, but important part of most controllers as a thumbstick.
-\hfigure{atari2600}{The joystick used for the Atari 2600}{0.7}
+\hfigure{atari2600}{The joystick used for the Atari 2600}{1}
 
 \subsection{Gamepad}
 As games became more complex, requirements for the controller also increased.
@@ -39,7 +39,7 @@ As this was the first use of an analogue joystick for this purpose, the collabor
 A second thumbstick has since become a common part of the gamepad after it was introduced for the \gls{ps1}.
 Four different gamepads for Nintendo consoles are shown in Figure \ref{fig:gamepads}.
 These show the changes from the \gls{nes} through the \gls{snes} and \gls{n64} to the GameCube.
-\hfigure{gamepads}{The gamepads for four generations of Nintendo consoles. NES (top left), SNES (top right), N64 (bottom left), and GameCube (bottom right)}{0.7}
+\hfigure{gamepads}{The gamepads for four generations of Nintendo consoles. NES (top left), SNES (top right), N64 (bottom left), and GameCube (bottom right)}{1}
 
 % Haptic feedback / force feedback
 Haptic feedback, often referred to as force feedback in the context of video games, is another technology added to the gamepad.
@@ -58,11 +58,11 @@ An analogue trigger can for instance be used as the accelerator in a racing or d
 The quantity of keys on the keyboard and later also the precision of the mouse as a pointing device gave new options for how games could be played.
 New genres and games followed.
 Among these were \gls{rts} games like Command \& Conquer and point-and-click games like Monkey Island.
-% TODO \cite cummingsEvolution(?)
+
 A good example of how well the keyboard and mouse setup can be for some genres, is that the control scheme for the \gls{rts} genre has stayed relatively unchanged since the beginning. An example of a keyboard and mouse can be seen in Figure \ref{fig:kbam}
 % History of FPS (also cummingsEvolution(?))
 
-\hfigure{kbam}{Keyboard and Mouse}{0.7}
+\hfigure{kbam}{Keyboard and Mouse}{1}
 
 
 \section{Motion Control Devices}
@@ -70,8 +70,8 @@ Motion controls devices became popular in the mid to late  2000s and are support
 
 \subsection{Nintendo Wiimote}
 \label{wiimote}
-%TODO write more about how these things changed gameplay
-\hfigure{wiimote}{Wiimote}{0.5}
+
+\hfigure{wiimote}{Wiimote}{1}
 When Nintendo released their Wii console in 2006 \cite{overmars2012} their new controller, the Wiimote, did not resemble the ones used by their competitors.
 The controller was in shape to a television remote, but more technically complex in functionality.
 % Casual
@@ -84,7 +84,7 @@ The revolutionary controller, along with a cheap price tag, may have been the re
 Although the Wiimote can be used as a gamepad by holding it sideways, this is not its primary function. % rephrase to "mode of operation"?
 The next five sections describe how it differs from a typical gamepad and how it changes the way games can be played. % Number of sections!
 
-For more information about how the technology of the Wiimote and how it can function as a spacially convenient device for 3D interfaces, see \cite{lee2008hacking,wingrave2010wiimote}.
+For more information about how the technology of the Wiimote and how it can function as a convenient device for 3D interfaces, see \cite{lee2008hacking,wingrave2010wiimote}.
 
 \subsection{Microsoft Kinect}
 % History: Microsoft, XBox
@@ -92,7 +92,7 @@ Microsoft Kinect is an input device for Microsoft's Xbox consoles.
 It was first introduced for the \gls{xb360} and had a camera, an \gls{ir} depth sensor, and a multi-microphone array. % Needs source and cite
 Using this technology it can track players, motion, and gestures in 3D space. % Fact-check and cite
 % Providing API for PC may have been a very smart move (find source)
-Microsoft has also provided an API for PC which makes it possible to use the Kinect for other purposes like research and even combining it with other technologies to create new innovations \cite{2015kinect}.
+Microsoft has also provided an \gls{api} for PC which makes it possible to use the Kinect for other purposes like research and even combining it with other technologies to create new innovations \cite{2015kinect}.
 % Among these are 3D scanning of objects, and use in games and other applications on a PC. %% Find source(s)
 % Opens for development for private / smaller companies. %% Find source(s)
 
@@ -115,7 +115,7 @@ A PlayStation Eye USB Camera can track the position of the controllers by tracki
 Distance to the camera can be calculated using the apparent size of the ball.
 The controller also has one analogue trigger and eight buttons, along with accelerometers and gyroscopes for tracking 3D position.
 Figure \ref{fig:psmove} shows the controller and camera.
-\hfigure{psmove}{PlayStation Move and PlayStation Eye}{0.5}
+\hfigure{psmove}{PlayStation Move and PlayStation Eye}{1}
 % pros
 % cons
 
@@ -139,7 +139,7 @@ In some cases, even a controller for manual shifting is possible.
 
 % Extra buttons
 These types of controllers may also have additional buttons and other inputs to navigate menus, as seen in Figure \ref{fig:wheel}.
-\hfigure{wheel}{Pedals and steering wheel with buttons for navigating menus.}{0.5}
+\hfigure{wheel}{Pedals and steering wheel with buttons for navigating menus.}{0.7}
 
 
 \subsection{Flight Simulators}
@@ -158,7 +158,7 @@ This is similar to how the WiiMote works, where the source of light is the Senso
 It is worth noting that the Sensorbar has multiple \gls{ir} LEDs used to provide orientation in addition to position.
 For the older game Duck Hunt \cite{duckhunt1984}, seen in Figure \ref{fig:duckhunt}, the light source is the television screen.
 The entire screen turns black, except for a small dot located where the player should be aiming, for a short time.
-\hfigure{duckhunt}{Screenshot from Duck Hunt}{0.7}
+\hfigure{duckhunt}{Screenshot from Duck Hunt}{1}
 % Duck hunt, wii
 % Lightguns, ..., other variations
 
@@ -169,8 +169,7 @@ Instruments that are simplified versions of the real thing or in some cases almo
 Dance mats and motion tracking.
 Even microphones can be used as a controller for rhythm games.
 
-% TODO Sources! Consider mentioning the name of the games or just keep the names of games in the citations
-\hfigure{rockband}{Instruments from the Rock Band franchise}{0.35}
+\hfigure{rockband}{Instruments from the Rock Band franchise}{1}
 % Guitar hero, Rock band
 Common examples are games that simulate the experience of playing in a band.
 To play these, special controllers made to look like instruments are required.
@@ -182,6 +181,4 @@ More recent games has also used cameras or motion detection controllers.
 \section{Summary}
 There is a multitude of ways of interacting with a video game, this chapter has explored the most common devices such as keyboards and gamepads, and also more specialized game controllers like light guns and plastic instruments. Using different interaction devices provides different experiences for the player and can be a big factor in the enjoyment and immersion in a video game. 
 
-This information will prove useful when deciding on what interaction devices to use for the game prototype to be developed. Motion control devices like the PlayStation Move seem like a promising way to create a different game dynamic which could be engaging for children to use.
-\note{Prøvde å endre litt her for å lage litt frampeik.}
-%ha med hva som er mest aktuelt for oppgaven.
+This information will prove useful when deciding on what interaction devices to use for the game prototype to be developed. Most relevant for this project would be to use a gamepad, or a motion control device, like the PlayStation Move, to create a different game dynamic which could be engaging for children to use.
