--- a/doc/report/study/chp_technology_study.tex
+++ b/doc/report/study/chp_technology_study.tex
@@ -20,7 +20,7 @@ Unreal Engine 4 is a game engine created by Epic Games which is known for its po
 The programming language used when creating games for Unreal Engine 4 is C++, which the engine itself is created with, but it also supports visual scripting which is called Blueprints. Blueprints are meant to be easy to use by anyone, and is a way to create quick prototypes and build playable content without writing code. The full C++ source code for the engine is also made available, which enables customization of the Unreal Engine subsystems, including physics, networking, and the editor itself.
 
 %other features that it supports + licencing.
-Other notable features of the Unreal Enigne 4 include Artificial Intelligence implementation, support for \gls{vr}, and integration with middleware technologies, like NVIDIA PhysX, AutoDesk Ganeware, and Oculus VR. Unreal Engine is free to use, with a 5\% royalty on product revenue after the first USD 3 000 for commercial products. More information about the features and licensing of Unreal Engine 4 can be found on their website \cite{unreal2016engine}.
+Other notable features of the Unreal Enigne 4 include Artificial Intelligence implementation, support for \gls{vr}, and integration with middleware technologies, like NVIDIA PhysX, AutoDesk Gameware, and Oculus VR. Unreal Engine is free to use, with a 5\% royalty on product revenue after the first USD 3 000 for commercial products. More information about the features and licensing of Unreal Engine 4 can be found on their website \cite{unreal2016engine}.
 
 
 \subsection{Unity3d 5}
@@ -33,7 +33,7 @@ The Unity editor is made to be extendible tool, and has its own store with over 
 There are two main versions of Unity3d 5, Personal Edition and Professional Edition, neither of which have any royalty fees. Personal edition is a free alternative made for individuals and small teams with full access to the game engine and its features, at the cost of having a Unity splash screen at the start of the game. There is also a limit to how much revenue and funding that can be received while still using the Personal Edition. Professional Edition has additional features, like cloud services for building and game analysis, and prioritized bug reporting. The price for Professional edition is USD 75 per month, or a perpetual licence for USD 1 500. There are also other alternatives for enterprise and educational editions. The source code for the engine can be licensed for users of the professional or enterprise editions. \cite{unity2016get}
 
 \subsection{Other Engines}
-There are other feature rich game engines out there for both corporations and individual developers. Licensing for game engines have traditionally been expensive, but they have become more affordable in the later years. In May 2016, CryTek cut their licensing fees completely and released the full source, as well as a pay what you want licencing model without royalties, for their game engine CryEngine \cite{papadopoulos2016cry}. CryEngine is known for producing games with beautiful graphics like the Crysis games. 
+There are other feature rich game engines out there for both corporations and individual developers. Licensing for game engines have traditionally been expensive, but they have become more affordable in the later years. In May 2016, CryTek cut their licensing fees completely and released the full source, as well as a pay what you want licensing model without royalties, for their game engine CryEngine \cite{papadopoulos2016cry}. CryEngine is known for producing games with beautiful graphics like the Crysis games. 
 Hero Engine is an engine for creating MMO games with support for seamless transition between maps and a robust AI system. It is quite expensive though with a starting price of USD 99 per year, and 30\% of revenue as royalties \cite{fabrik2016licence}.
 GameMaker:Studio is a simple and straight forward engine created by YoYo Games for creating 2D games. It prides itself on being easy to use, and the engine also features a free version \cite{yoyo2016gamemaker}.
 Wave Engine is a relatively new game engine, released in 2013 by Wave Corporation, that focuses on mobile gaming. It is free to use with no royalties, except the obligation to include their logo in the splash screen of the game \cite{wave2016engine}. 
@@ -44,7 +44,7 @@ Some game engines are not available for licensing though, and are exclusive to t
 In addition to game engines, there are other tools and resources needed in order to create and distribute video games. This section gives an overview on what resources are available for independent develops to aid in game making. This section is based on an overview by Pixelprospector, a site that offers information and lists of resources related to these topics \cite{pixel2016prospector}.
 
 \subsection{Software Tools}
-Other than game engines, important software tools include Integrated Development Environments (IDE), version control systems, and project management software. The IDE and programming language used is usually dependent on the game engine chosen. An IDE is a tool for writing source code for the game and normally contain a compiler and a debugger. IDEs are meant to assist the developer in writing code and increasing productivity by providing easy management and editing of the code base for the game.
+Other than game engines, important software tools include \gls{ide}, project management software, and version control systems. The \gls{ide} and programming language used is usually dependent on the game engine chosen. An \gls{ide} is a tool for writing source code for the game and normally contain a compiler and a debugger. \gls{ide}s are meant to assist the developer in writing code and increasing productivity by providing easy management and editing of the code base for the game. Project management software is useful for managing the development of the software by providing tools for keeping track of tasks and resources for the project. This kind of software allows for easy management of requirements and can help manage which developers are working on different features.
 
 Another important software tool is version control. A version control system records changes to files, in order to recall different versions of the files later. It enables useful features like reverting files to a previous state, reverting the whole project to a previous state, and comparing changes over time. It is also useful if the code somehow gets lost or broken \cite{git2016vcs}.
 
@@ -61,5 +61,4 @@ Game development technologies have come a long way to support independent develo
 
 Game resources is also an important aspect to the development of video games. Software tools like version control systems are freely available for anyone to use and help keeping track of changes over time. Game assets can be acquired through paid or free channels on the internet, and there are online resources for hiring designers. Digital distribution makes it easy for an independent developer to publish their game online either via payment processors or via online game stores like Steam.
 
-Game engines seem to be useful when creating video games, and and engine like Unity3D or Unreal Engine 4 would be helful for creating the game prototype. Access to free game assets can give life to the game prototype, and a version control system would be helpful in order to provide a backup and to keep track of the changes in the game.
-\note{er dette greit?}
+For this project, a game engine like Unity3D or Unreal Engine 4 would be helpful for creating the game prototype. Access to free game assets can give life to the game prototype, and a version control system would be helpful in order to provide a backup and to keep track of the changes in the game.
