--- a/doc/report/study/part_study.tex
+++ b/doc/report/study/part_study.tex
@@ -1,4 +1,4 @@
-\epigraphhead[400]{This describes the literature study that was conducted in this thesis to help answer the research questions and support the results that were obtained.}
+\epigraphhead[400]{This part describes an evolution of game technology, different interaction devices, immersion in video games, and an overview of video game development technologies.}
 
 \part{Literature Study}
 \label{prt:study}
