--- a/doc/report/conclusion/part_conclusion.tex
+++ b/doc/report/conclusion/part_conclusion.tex
@@ -1,4 +1,4 @@
-\epigraphhead[400]{This part concludes the thesis and evaluates the experience gained in this project, as well as the conclusion and insight into possible further work for this project.}
+\epigraphhead[400]{This part evaluates the research done in this project, as well as providing a conclusion of the thesis, and offers insight into possible areas for further work.}
 
 \part{Evaluation and Conclusion}
 \input{conclusion/chp_evaluation}
