--- a/doc/report/init/abstract.tex
+++ b/doc/report/init/abstract.tex
@@ -1,21 +1,26 @@
 % !TeX spellcheck = en_GB
 \chapter*{Abstract}
-\note{Motivation, problem, method, results, conclusions}
 
 %Motivation:
 %Why do we care about the problem and the results? If the problem isn't obviously "interesting" it might be better to put motivation first; but if your work is incremental progress on a problem that is widely recognized as important, then it is probably better to put the problem statement first to indicate which piece of the larger problem you are breaking off to work on. This section should include the importance of your work, the difficulty of the area, and the impact it might have if successful.
+Children today, are exposed to video games from an early age in the form of tablets, smart phones and computers. Social interaction is a big part of why we play video games and is a way for us to socialize with friends and strangers. This thesis seeks to explore these areas by creating a video game, focusing on social interaction to stimulate collaboration  children.
+
+
 
 %Problem statement:
 %What problem are you trying to solve? What is the scope of your work (a generalized approach, or for a specific situation)? Be careful not to use too much jargon. In some cases it is appropriate to put the problem statement before the motivation, but usually this only works if most readers already understand why the problem is important.
+The main research goals of this thesis was to create a game prototype that focuses on social interaction and collaboration, conduct an experiment by testing the game with children, and to study the technologies and process involved in video game development. Reaching these goals was achieved through a literature study on video game technologies and concepts, the design and creation of a video game prototype, and by analysing the results from a play test that was performed at Buvik School.
 
 %Approach:
 %How did you go about solving or making progress on the problem? Did you use simulation, analytic models, prototype construction, or analysis of field data for an actual product? What was the extent of your work (did you look at one application program or a hundred programs in twenty different programming languages?) What important variables did you control, ignore, or measure?
 
 %Results:
 %What's the answer? Specifically, most good computer architecture papers conclude that something is so many percent faster, cheaper, smaller, or otherwise better than something else. Put the result there, in numbers. Avoid vague, hand-waving results such as "very", "small", or "significant." If you must be vague, you are only given license to do so when you can talk about orders-of-magnitude improvement. There is a tension here in that you should not provide numbers that can be easily misinterpreted, but on the other hand you don't have room for all the caveats.
+From these methods, the central findings were that having different roles for the players in the game created a dependency between the them, which enhanced the collaboration. Puzzle elements, and the unique gameplay elements in the game prototype were a great way to encourage special interaction, as the children needed to communicate in order to succeed in the game. The play testing was a success and all the children enjoyed playing a collaborative game with focus on social interaction. Additionally, the children saw the importance of working together in order to succeed. Furthermore, the process of video game development is greatly aided by tools like game engines that handle common video game related tasks.
 
 %Conclusions:
 %What are the implications of your answer? Is it going to change the world (unlikely), be a significant "win", be a nice hack, or simply serve as a road sign indicating that this path is a waste of time (all of the previous results are useful). Are your results general, potentially generalizable, or specific to a particular case?
+Research presented in this thesis is useful for aspiring and qualified video game developers, as it explores video game technologies and concepts, and the process of video game development. The game prototype created, its design, and the results of the experiment serves as empirical data and a source of inspiration for research and video game development. The results show that using collaboration in video games has potential for further research, and could possibly be used to help teach children valuable skills with regards to social interaction and collaboration.
 
 
 
