--- a/doc/report/init/preface.tex
+++ b/doc/report/init/preface.tex
@@ -1,7 +1,7 @@
 \chapter*{Preface}
 This report presents the work done for my master's thesis at the Department of Computer and Information Technology at the Norwegian University of Science and Technology. The work was done during the spring of 2016 and concludes my master's degree in Computer Science.
 
-I would like to thank Bente Sandø and the faculty and pupils of Buvik Skole SFO (Buvik School after school program) for letting us preform a user test with the children there. The children were all well behaved and provided great feedback directly and indirectly which helped with essential data for the evaluation of the game prototype.
+I would like to thank Bente Sandø and the faculty and pupils of Buvik Skole SFO (Buvik School after school program) for letting us preform a user test with the children there. The children were all well behaved and provided great feedback, directly and indirectly, which helped with essential data for the evaluation of the game prototype.
 
 I would also like to thank Kjell R. Elstad, fellow student and friend with whom I wrote the foundation that this project is based on.
 
@@ -9,5 +9,8 @@ Last but not least, I would like to thank my supervisor, Alf Inge Wang, for prov
 
 \vspace{2cm}
 \begin{center}
+Trondheim, the 17th of June, 2016
+
+\vspace{2em}
 David Johan Hovind
 \end{center}
